# flight-control

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml
server/: Dockerfile  alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 400553615ce2_initial_schema.py  a1b2c3d4e5f6_add_auto_retry_columns.py  a1b2c3d4e5f6_add_skill_ids_to_jobs.py  b2c3d4e5f6a7_add_webhook_columns.py  c3d4e5f6a7b8_add_required_labels_to_job_runs.py  d4e5f6a7b8c9_add_artifacts_table.py  d4e5f6a7b8c9_add_auto_retry_columns.py  e5f6a7b8c9d0_add_workspaces.py  f6a7b8c9d0e1_add_skills_tables.py
server/src/orchestrator/: auth.py  config.py  database.py  encryption.py  main.py  migrate.py  storage.py
server/tests/: conftest.py  test_artifacts.py  test_label_routing.py  test_skill_parser.py  test_skills_api.py  test_storage.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js
ui/src/: App.jsx  index.css  main.jsx
ui/src/components/: LogViewer.jsx  ProviderModelSelect.jsx  StructuredLogViewer.jsx  (+1 more)
worker/: Dockerfile  pyproject.toml
worker/src/orchestrator_worker/: client.py  config.py  config_writer.py  log_streamer.py  main.py  runner.py  skill_writer.py
worker/src/orchestrator_worker/agents/: __init__.py  base.py  events.py  goose.py  goose_parser.py
worker/tests/: conftest.py  test_config_writer.py  test_goose_parser.py  test_goose_runner.py  test_log_streamer.py  test_runner.py  test_skill_writer.py
(+58 files in other folders)
