[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flight-control-worker"
version = "0.1.0"
description = "Flight Control - Worker Node"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator_worker"]
